# intell

./: .cursorrules  .gitignore  DEPLOYMENT.md  ENV_SETUP.md  README.md  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile.prod  README.md  WINDOWS_CELERY.md  env.development.example  env.example  env.production.example  pyproject.toml  pytest.ini  requirements.txt  verify_api.py
backend/apps/ai_descriptions/: README.md  __init__.py  apps.py  providers.py  tasks.py  views.py
backend/apps/algorithms/: README.md  __init__.py  apps.py  base.py  registry.py  visualization.py
backend/apps/artifacts/: README.md  __init__.py  apps.py  services.py  storage.py
backend/apps/audit/: README.md  __init__.py  admin.py  apps.py  helpers.py  models.py
backend/apps/authentication/: README.md  __init__.py  authentication.py  microsoft.py  serializers.py  urls.py  views.py  views_microsoft.py
backend/apps/core/: README.md  __init__.py  apps.py  exceptions.py  storage.py  (+2 more)
backend/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/context/: acumulativo_epo.py  evolucion_epo.py  forecast_epo.py  inventor_epo.py  jurisdiccion_epo.py  solicitante_epo.py  tendencias_epo.py  treemap_epo.py
backend/scripts/: analyze_excel.py  check_celery.py  check_infrastructure.py  diagnose_celery.py  manual_test_guide.md  run_e2e_pipeline.py  setup_dev.py  start_celery_worker.ps1  start_celery_worker.sh  test_db_backend.py  test_patent_algorithms.py  test_retry_cancel.py  test_websocket.py
backend/tests/: __init__.py  conftest.py  test_end_to_end.py
(+280 files in other folders)
