[project]
name = "intell-backend"
version = "0.1.0"
description = "Intell Backend Application"
authors = [
    {name = "Felipe Mendieta"}
]
requires-python = "^3.12"
dependencies = [
    "django (>=6.0,<7.0)",
    "djangorestframework (>=3.16.0)",
    "drf-spectacular (>=0.29.0)",
    "django-cors-headers (>=4.9.0)",
    "python-decouple (>=3.8)",
    "dj-database-url (>=2.1.0)",
    "psycopg2-binary (>=2.9.9)",
    "celery (>=5.3.0)",
    "redis (>=5.0.0)",
    "channels (>=4.0.0)",
    "channels-redis (>=4.1.0)",
    "langchain (>=0.1.0)",
    "langchain-openai (>=0.0.5)",
    "langchain-anthropic (>=0.1.0)",
    "pandas (>=2.0.0)",
    "openpyxl (>=3.1.0)",
    "httpx (>=0.25.0)",
    "tenacity (>=8.2.0)",
    "matplotlib (>=3.7.0)",
    "numpy (>=1.24.0)",
    "pillow (>=10.0.0)",
    "statsmodels (>=0.14.0)",
    "pmdarima (>=2.0.0)",
    "squarify (>=0.4.2)",
    "daphne (>=4.2.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=7.4.0)",
    "pytest-django (>=4.7.0)",
    "pytest-cov (>=4.1.0)",
    "factory-boy (>=3.3.0)"
]
